convert template to cookiecutter and modify circleci test

--- a/{{cookiecutter.project_slug}}/accounts/templates/accounts/_user_menu.html
+++ b/{{cookiecutter.project_slug}}/accounts/templates/accounts/_user_menu.html
@@ -1,4 +1,4 @@
-{% load i18n %}
+{% raw %}{% load i18n %}
 <div class="top-buttons text-right">
   <a href="#" data-click="expand">{% trans "Expand all" %}</a>
   |
@@ -31,4 +31,4 @@
       </ul>
     </div>
   </div>
-</div>
+</div>{% endraw %}
