--- a/{{cookiecutter.project_slug}}/accounts/templates/accounts/base.html
+++ b/{{cookiecutter.project_slug}}/accounts/templates/accounts/base.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% raw %}{% extends "base.html" %}
 {% load staticfiles %}
 {% load i18n %}
 
@@ -19,4 +19,4 @@
     </div>
   </div>
 </div>
-{% endblock %}
+{% endblock %}{% endraw %}
