--- a/{{cookiecutter.project_slug}}/accounts/templates/accounts/password_change.html
+++ b/{{cookiecutter.project_slug}}/accounts/templates/accounts/password_change.html
@@ -1,4 +1,4 @@
-{% extends "accounts/base.html" %}
+{% raw %}{% extends "accounts/base.html" %}
 {% load i18n %}
 {% block title %}{% trans 'Change password' %}{% endblock %}
 {% block accounts-content %}
@@ -21,4 +21,4 @@
 </div>
 
 
-{% endblock %}
+{% endblock %}{% endraw %}
