--- a/{{cookiecutter.project_slug}}/accounts/templates/accounts/password_change_done.html
+++ b/{{cookiecutter.project_slug}}/accounts/templates/accounts/password_change_done.html
@@ -1,4 +1,4 @@
-{% extends "accounts/base.html" %}
+{% raw %}{% extends "accounts/base.html" %}
 {% load i18n %}
 
 
@@ -10,4 +10,4 @@
 
 <p>{% trans 'Your password was changed.' %}</p>
 
-{% endblock %}
+{% endblock %}{% endraw %}
