--- a/{{cookiecutter.project_slug}}/accounts/templates/accounts/password_reset.html
+++ b/{{cookiecutter.project_slug}}/accounts/templates/accounts/password_reset.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% raw %}{% extends "base.html" %}
 {% load i18n %}
 
 {% block content %}
@@ -15,4 +15,4 @@
     </div>
   </fieldset>
 </form>
-{% endblock %}
+{% endblock %}{% endraw %}
