--- a/{{cookiecutter.project_slug}}/accounts/templates/accounts/password_reset_email.html
+++ b/{{cookiecutter.project_slug}}/accounts/templates/accounts/password_reset_email.html
@@ -1,1 +1,1 @@
-{{ protocol }}://{{ domain }}/reset/{{ uid }}-{{ token }}/
+{% raw %}{{ protocol }}://{{ domain }}/reset/{{ uid }}-{{ token }}/{% endraw %}
