--- a/{{cookiecutter.project_slug}}/accounts/templates/accounts/password_set.html
+++ b/{{cookiecutter.project_slug}}/accounts/templates/accounts/password_set.html
@@ -1,4 +1,4 @@
-{% extends "accounts/base.html" %}
+{% raw %}{% extends "accounts/base.html" %}
 {% load i18n static %}
 
 {% block title %}{% trans 'Password set' %}{% endblock %}
@@ -22,4 +22,4 @@
   </form>
 </div>
 
-{% endblock %}
+{% endblock %}{% endraw %}
