--- a/{{cookiecutter.project_slug}}/templates/500.html
+++ b/{{cookiecutter.project_slug}}/templates/500.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% raw %}<!DOCTYPE html>
 <html>
 <head>
   <title>Page unavailable</title>
@@ -17,4 +17,4 @@
   </div>
 </div>
 </body>
-</html>
+</html>{% endraw %}
