--- a/{{cookiecutter.project_slug}}/accounts/templates/accounts/edit_profile.html
+++ b/{{cookiecutter.project_slug}}/accounts/templates/accounts/edit_profile.html
@@ -1,4 +1,4 @@
-{% extends "accounts/base.html" %}
+{% raw %}{% extends "accounts/base.html" %}
 {% load i18n %}
 
 {% block title %}{% trans 'Your profile' %}{% endblock %}
@@ -23,4 +23,4 @@
     </form>
   </div>
 </div>
-{% endblock %}
+{% endblock %}{% endraw %}
