--- a/{{cookiecutter.project_slug}}/accounts/templates/accounts/login.html
+++ b/{{cookiecutter.project_slug}}/accounts/templates/accounts/login.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% raw %}{% extends "base.html" %}
 {% load i18n %}
 
 {% block title %}{% trans 'Log in' %}{% endblock %}
@@ -63,4 +63,4 @@
   </div>
 </div>
 
-{% endblock %}
+{% endblock %}{% endraw %}
