--- a/{{cookiecutter.project_slug}}/accounts/templates/accounts/password_reset_complete.html
+++ b/{{cookiecutter.project_slug}}/accounts/templates/accounts/password_reset_complete.html
@@ -1,3 +1,3 @@
-{% extends "base.html" %}
+{% raw %}{% extends "base.html" %}
 
-{% block content %}Password reset successfully{% endblock %}
+{% block content %}Password reset successfully{% endblock %}{% endraw %}
