--- a/{{cookiecutter.project_slug}}/accounts/templates/accounts/password_reset_done.html
+++ b/{{cookiecutter.project_slug}}/accounts/templates/accounts/password_reset_done.html
@@ -1,3 +1,3 @@
-{% extends "base.html" %}
+{% raw %}{% extends "base.html" %}
 
-{% block content %}Email sent{% endblock %}
+{% block content %}Email sent{% endblock %}{% endraw %}
