--- a/{{cookiecutter.project_slug}}/templates/_footer_nav.html
+++ b/{{cookiecutter.project_slug}}/templates/_footer_nav.html
@@ -1,6 +1,6 @@
-{% load i18n %}
+{% raw %}{% load i18n %}
 <ul class="list-unstyled">
   <li class="pull-right">
     <a href="#top">{% trans "Back to top" %}</a>
   </li>
-</ul>
+</ul>{% endraw %}
