--- a/{{cookiecutter.project_slug}}/templates/_notification.html
+++ b/{{cookiecutter.project_slug}}/templates/_notification.html
@@ -1,8 +1,8 @@
-{% load bootstrap %}
+{% raw %}{% load bootstrap %}
 {% if messages %}
 <div class="notifications">
   {% for message in messages %}
     {% render_message message %}
   {% endfor %}
 </div>
-{% endif %}
+{% endif %}{% endraw %}
