--- a/{{cookiecutter.project_slug}}/templates/_top_banner.html
+++ b/{{cookiecutter.project_slug}}/templates/_top_banner.html
@@ -1,4 +1,4 @@
-{% load i18n %}
+{% raw %}{% load i18n %}
 <div class="page-header" id="banner">
   {% if show_top_banner %}
   <div class="row">
@@ -11,4 +11,4 @@
     </div>
   </div>
   {% endif %}
-</div>
+</div>{% endraw %}
