--- a/{{cookiecutter.project_slug}}/templates/base.html
+++ b/{{cookiecutter.project_slug}}/templates/base.html
@@ -1,4 +1,4 @@
-<!doctype html>
+{% raw %}<!doctype html>
 <!--[if lt IE 7]>
 <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>
@@ -66,4 +66,4 @@
 {% endblock %}
 <script src="{% static 'common/js/foot_define.js' %}"></script>
 </body>
-</html>
+</html>{% endraw %}
