--- a/{{cookiecutter.project_slug}}/templates/general/form_render.html
+++ b/{{cookiecutter.project_slug}}/templates/general/form_render.html
@@ -1,4 +1,4 @@
-{% load bootstrap %}
+{% raw %}{% load bootstrap %}
 {% form_requirements form %}
 {% for error in form.non_field_errors %}
 <div class="alert alert-danger">
@@ -39,4 +39,4 @@
 </div>
 {% endif %}
 {% endfor %}
-{{ form.media }}
+{{ form.media }}{% endraw %}
