[r] Add raw tag to all template files

--- a/{{cookiecutter.project_slug}}/accounts/templates/accounts/_user_menu.html
+++ b/{{cookiecutter.project_slug}}/accounts/templates/accounts/_user_menu.html
@@ -1,4 +1,4 @@
-{% load i18n common_filters %}
+{% raw %}{% load i18n common_filters %}
 <div class="top-buttons text-right">
   <a href="#" data-click="expand">{% trans "Expand all" %}</a>
   |
@@ -28,4 +28,4 @@
       </ul>
     </div>
   </div>
-</div>
+</div>{% endraw %}
