--- a/{{cookiecutter.project_slug}}/templates/account/password_reset_from_key.html
+++ b/{{cookiecutter.project_slug}}/templates/account/password_reset_from_key.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% raw %}{% extends "account/base.html" %}
 
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
@@ -31,4 +31,4 @@
     {% endif %}
   </div>
 </div>
-{% endblock %}
+{% endblock %}{% endraw %}
