--- a/{{cookiecutter.project_slug}}/templates/account/password_set.html
+++ b/{{cookiecutter.project_slug}}/templates/account/password_set.html
@@ -1,4 +1,4 @@
-{% extends "accounts/base.html" %}
+{% raw %}{% extends "accounts/base.html" %}
 
 {% load i18n %}
 
@@ -27,4 +27,4 @@
     </div>
   </div>
 </div>
-{% endblock %}
+{% endblock %}{% endraw %}
