--- a/{{cookiecutter.project_slug}}/templates/account/signup.html
+++ b/{{cookiecutter.project_slug}}/templates/account/signup.html
@@ -1,4 +1,4 @@
-{% extends "accounts/base.html" %}
+{% raw %}{% extends "accounts/base.html" %}
 
 {% load i18n %}
 
@@ -42,4 +42,4 @@
   {% include '_account_social_login.html' %}
 </div>
 
-{% endblock %}
+{% endblock %}{% endraw %}
