--- a/{{cookiecutter.project_slug}}/templates/socialaccount/connections.html
+++ b/{{cookiecutter.project_slug}}/templates/socialaccount/connections.html
@@ -1,4 +1,4 @@
-{% extends "accounts/base.html" %}
+{% raw %}{% extends "accounts/base.html" %}
 
 {% load i18n common_filters%}
 
@@ -57,4 +57,4 @@
   </div>
 </div>
 
-{% endblock %}
+{% endblock %}{% endraw %}
