--- a/{{cookiecutter.project_slug}}/templates/two_factor/_wizard_forms.html
+++ b/{{cookiecutter.project_slug}}/templates/two_factor/_wizard_forms.html
@@ -1,4 +1,4 @@
-<table>
+{% raw %}<table>
   {{ wizard.management_form }}
   {% include "general/form_render.html" with form=wizard.form %}
-</table>
+</table>{% endraw %}
