--- a/{{cookiecutter.project_slug}}/templates/_account_social_login.html
+++ b/{{cookiecutter.project_slug}}/templates/_account_social_login.html
@@ -1,4 +1,4 @@
-{% load i18n %}
+{% raw %}{% load i18n %}
 
 <div class="col-lg-6">
   <div class="well">
@@ -11,4 +11,4 @@
       {% include "socialaccount/snippets/provider_list.html" with process="login" %}
     </div>
   </div>
-</div>
+</div>{% endraw %}
