--- a/{{cookiecutter.project_slug}}/templates/_top_nav.html
+++ b/{{cookiecutter.project_slug}}/templates/_top_nav.html
@@ -1,4 +1,4 @@
-{% load i18n %}
+{% raw %}{% load i18n %}
 <div class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
@@ -52,4 +52,4 @@
 
     </div>
   </div>
-</div>
+</div>{% endraw %}
