--- a/{{cookiecutter.project_slug}}/templates/account/email_confirm.html
+++ b/{{cookiecutter.project_slug}}/templates/account/email_confirm.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% raw %}{% extends "account/base.html" %}
 
 {% load i18n %}
 {% load account %}
@@ -34,5 +34,4 @@
   </div>
 </div>
 
-
-{% endblock %}
+{% endblock %}{% endraw %}
