--- a/{{cookiecutter.project_slug}}/templates/account/password_reset.html
+++ b/{{cookiecutter.project_slug}}/templates/account/password_reset.html
@@ -1,4 +1,4 @@
-{% extends "accounts/base.html" %}
+{% raw %}{% extends "accounts/base.html" %}
 
 {% load i18n %}
 {% load account %}
@@ -34,4 +34,4 @@
   </div>
 </div>
 
-{% endblock %}
+{% endblock %}{% endraw %}
