--- a/{{cookiecutter.project_slug}}/templates/account/password_reset_from_key_done.html
+++ b/{{cookiecutter.project_slug}}/templates/account/password_reset_from_key_done.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% raw %}{% extends "account/base.html" %}
 
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
@@ -16,4 +16,4 @@
   </div>
 </div>
 
-{% endblock %}
+{% endblock %}{% endraw %}
