--- a/{{cookiecutter.project_slug}}/templates/account/signup_closed.html
+++ b/{{cookiecutter.project_slug}}/templates/account/signup_closed.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% raw %}{% extends "account/base.html" %}
 
 {% load i18n %}
 
@@ -12,4 +12,4 @@
     <p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
   </div>
 </div>
-{% endblock %}
+{% endblock %}{% endraw %}
