--- a/{{cookiecutter.project_slug}}/templates/account/verification_sent.html
+++ b/{{cookiecutter.project_slug}}/templates/account/verification_sent.html
@@ -1,4 +1,4 @@
-{% extends "accounts/base.html" %}
+{% raw %}{% extends "accounts/base.html" %}
 
 {% load i18n %}
 
@@ -15,4 +15,4 @@
   </div>
 </div>
 
-{% endblock %}
+{% endblock %}{% endraw %}
