--- a/{{cookiecutter.project_slug}}/templates/account/verified_email_required.html
+++ b/{{cookiecutter.project_slug}}/templates/account/verified_email_required.html
@@ -1,4 +1,4 @@
-{% extends "accounts/base.html" %}
+{% raw %}{% extends "accounts/base.html" %}
 
 {% load i18n %}
 
@@ -25,5 +25,4 @@
   </div>
 </div>
 
-
-{% endblock %}
+{% endblock %}{% endraw %}
