--- a/{{cookiecutter.project_slug}}/templates/two_factor/core/setup_complete.html
+++ b/{{cookiecutter.project_slug}}/templates/two_factor/core/setup_complete.html
@@ -1,4 +1,4 @@
-{% extends "two_factor/_base_focus.html" %}
+{% raw %}{% extends "two_factor/_base_focus.html" %}
 {% load i18n %}
 
 {% block accounts-content %}
@@ -21,4 +21,4 @@
         class="btn btn-success">{% trans "Add Phone Number" %}</a></p>
   {% endif %}
 
-{% endblock %}
+{% endblock %}{% endraw %}
