--- a/{{cookiecutter.project_slug}}/templates/two_factor/profile/disable.html
+++ b/{{cookiecutter.project_slug}}/templates/two_factor/profile/disable.html
@@ -1,4 +1,4 @@
-{% extends "two_factor/_base_focus.html" %}
+{% raw %}{% extends "two_factor/_base_focus.html" %}
 {% load i18n %}
 
 {% block accounts-content %}
@@ -11,4 +11,4 @@
     <button class="btn btn-danger"
             type="submit">{% trans "Disable" %}</button>
   </form>
-{% endblock %}
+{% endblock %}{% endraw %}
