--- a/{{cookiecutter.project_slug}}/templates/two_factor/profile/profile.html
+++ b/{{cookiecutter.project_slug}}/templates/two_factor/profile/profile.html
@@ -1,4 +1,4 @@
-{% extends "two_factor/_base.html" %}
+{% raw %}{% extends "two_factor/_base.html" %}
 {% load i18n two_factor %}
 
 {% block accounts-content %}
@@ -58,4 +58,4 @@
       {% trans "Enable Two-Factor Authentication" %}</a>
     </p>
   {% endif %}
-{% endblock %}
+{% endblock %}{% endraw %}
